--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -6,6 +6,14 @@
   "placement": {
     "mode": "smart"
   },
+  "observability": {
+    "logs": {
+      "enabled": false,
+      "head_sampling_rate": 1,
+      "invocation_logs": true,
+      "persist": true
+    }
+  },
   "assets": {
     "directory": "./dist/client/",
     "not_found_handling": "single-page-application"
