--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -8,10 +8,8 @@
   },
   "observability": {
     "logs": {
-      "enabled": false,
-      "head_sampling_rate": 1,
-      "invocation_logs": true,
-      "persist": true
+      "enabled": true,
+      "head_sampling_rate": 1
     }
   },
   "assets": {
