--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "pako": "^2.1.0",
     "pinia": "^3.0.3",
     "pinia-plugin-persistedstate": "^4.5.0",
+    "sanitize-filename": "^1.6.3",
     "vue": "^3.5.18",
     "vue-advanced-cropper": "^2.8.9",
     "vue-router": "^4.5.1",
