--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "sass-embedded": "^1.92.1",
     "terser": "^5.44.0",
     "vite": "^7.1.11",
+    "vite-plugin-lqip": "^0.0.5",
     "vite-plugin-pwa": "^1.1.0",
     "vite-plugin-vue-devtools": "^8.0.0",
     "vite-plugin-vuetify": "^2.1.2",
