feat: implement pre-built FlexSearch indexes for faster search initialization

--- a/.gitignore
+++ b/.gitignore
@@ -55,6 +55,8 @@ icon_crawler.py
 
 public/ws_cards_db.*.bin
 public/wsr_cards_db.*.bin
+public/ws_index*.json
+public/wsr_index*.json
 public/card-db-manifest-ws.json
 public/card-db-manifest-wsr.json
 
