chore: update vite-plugin-pwa

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "UClimax",
-  "name": "UClimax",
+  "short_name": "UClIMAX",
+  "name": "UClIMAX",
   "icons": [
     {
       "src": "/icons/icon-192x192.png",
